add 123.html header 分類

--- a/123.html
+++ b/123.html
@@ -3,13 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>鈞智Blog</title>
 </head>
+
+<style>
+
+    header{
+        text-align: center;
+    }
+
+
+</style>
 
 <body>
 
-        <h1>這是一個測試</h1>
-        <h1>這是main測試</h1>
+    <header>
+        <h1>鈞智Blog</h1>
+        <hr>
+
+        <div>
+            <a href="">MVC Code 筆記</a>
+            <a href="">畢專</a>
+            <a href="">作品</a>
+            <a href="">網頁前端筆記</a>
+            <a href="">網頁後端筆記</a>
+            <a href="">系統分析筆記</a>
+            <a href="">資料庫筆記</a>
+            <a href="">OpenAI筆記(python)</a>
+            <a href="">Arduino筆記</a>
+            <a href="">Git 版控筆記</a>
+            <a href="">JS/JSS/Vue.js 筆記</a>
+            <a href="">鈞智的生活</a>
+            <a href="">Android Studio 筆記</a>
+        </div>
+
+        <div>
+            <a href="">鈞智的生活</a>
+        </div>
+
+        <div>
+            <a href="">每日心情紀錄</a>
+        </div>
+        <div>
+            <a href="">使用軟件</a>
+        </div>
+        <div>
+            <a href="">UI/UX設計</a>
+        </div>
+    </header>
     
 </body>
 </html>
