新增body background /建立Git View/ 更改123.html介面

--- a/Git_View/GitView.html
+++ b/Git_View/GitView.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>鈞智Blog</title>
+    <title>Git 教學</title>
 </head>
 
 <style>
-
     body{
-        top:0;
-        left: 0;
-        background-image: url(image/background.svg);
+        background-image: url(/image/background.svg);
     }
+
 
     header{
         position: sticky;
@@ -29,19 +27,6 @@
         background-color: #ffffff;
     }
 
-    .container{
-        width: 90%;
-        height: 100vh;
-        background-color: rgba(157, 157, 157, 0.547);
-        border-radius: 10px;
-        margin: 40px auto 0 auto;
-    }
-
-    footer{
-        text-align: center;
-    }
-
-
 </style>
 
 <body>
@@ -49,7 +34,6 @@
     <header>
         <h1>鈞智Blog</h1>
         <hr>
-
         <div>
 
             <select>
@@ -96,14 +80,6 @@
     </header>
 
 
-    <div class="container">
 
-    </div>
-
-    <footer>
-        <hr>
-        <p>鈞智-blog</p>
-    </footer>
-    
 </body>
 </html>
