--- a/Home.html
+++ b/Home.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>鈞智Blog</title>
+
 </head>
 
 <style>
 
     body{
-        top:0;
-        left: 0;
+        margin: 0;
+        padding: 0;
         background-image: url(image/background.svg);
     }
 
     header{
         position: sticky;
+        top:0;
         text-align: center;
         width: 100%;
-        top:0;
+        padding-top: 5px;
+        height: 90px;
+        background-color: rgb(250, 215, 242);
     }
 
     select{
@@ -26,7 +30,7 @@
         height: 30px;
         border: none;
         border-radius: 10px;
-        background-color: #ffffff;
+        background-color: rgb(238, 137, 244);
     }
 
     .container{
